# ios2droid

./: .clang-format  .gitignore  LICENSE  Makefile  README.md  setup  template.py
ios2droid/: CMakeLists.txt  help.cpp  inspect.cpp  inspect.hpp  main.cpp  parse_exif.cpp  parse_exif.hpp  rename_files.cpp  rename_files.hpp  reporting.cpp  reporting.hpp  utils.cpp  utils.hpp
ios2droid/src/: main.cpp
src/: CMakeLists.txt  help.cpp  help.hpp  inspect.cpp  inspect.hpp  main.cpp  rename_files.cpp  rename_files.hpp  reporting.cpp  reporting.hpp  utils.cpp
tests/: test_basic.py  test_inspect.py  test_ios2droid.py  test_ios2droid_memory.py  test_misc.py  test_rename.py  utils.py
